--- a/app/frontend/templates/concert.html
+++ b/app/frontend/templates/concert.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ concert["concert_name"] }}{% endblock %}
+{% block title %}{{ concert["concert"]["concert_name"] }}{% endblock %}
 
 {% block content %}
     <div>
