--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -25,19 +25,22 @@
                         <rect width="100%" height="100%" fill="#aaa"></rect>
                     </svg>
 
-                    <div class="carousel-caption container row" style="height: 370px;">
-                        {% if concerts[0]["concert_photo"] %}
-                            <div class="col col-4 d-none d-lg-block me-3">
-                                <img class="img-cover shadow " width="300" height="300"
-                                     src="{{ concerts[0]["concert_photo"] }}" alt="img">
+                    <div class="carousel-caption">
+                        <div class="container row" style="height: 370px;">
+                            {% if concerts[0]["concert_photo"] %}
+                                <div class="col col-4 d-none d-lg-block me-3">
+                                    <img class="img-cover shadow " width="300" height="300"
+                                         src="{{ concerts[0]["concert_photo"] }}" alt="img">
+                                </div>
+                            {% endif %}
+                            <div class="col text-start py-5">
+                                <h1 class="display-2">{{ concerts[0]["concert_name"] }}</h1>
+                                <p>{{ concerts[0]["hall"]['hall_name'] }} <i
+                                        class="bi bi-dot"></i> {{ concerts[0]["concert_date"]|dt }}</p>
+                                <p><a class="btn btn-lg btn-primary text-light"
+                                      href="{{ url_for('concert_page', id=concerts[0]["concert_id"]) }}">{{ _('Buy tickets') }}</a>
+                                </p>
                             </div>
-                        {% endif %}
-                        <div class="col text-start py-5">
-                            <h1 class="display-2">{{ concerts[0]["concert_name"] }}</h1>
-                            <p>{{ concerts[0]["hall"]['hall_name'] }} <i
-                                    class="bi bi-dot"></i> {{ concerts[0]["concert_date"]|dt }}</p>
-                            <p><a class="btn btn-lg btn-primary text-light"
-                                  href="{{ url_for('concert_page', id=concerts[0]["concert_id"]) }}">{{  _('Buy tickets') }}</a></p>
                         </div>
                     </div>
                 </div>
@@ -50,19 +53,25 @@
                                 <rect width="100%" height="100%" fill="#aaa"></rect>
                             </svg>
 
-                            <div class="carousel-caption container row" style="height: 370px;">
-                                {% if concerts[n+1]["concert_photo"] %}
-                                    <div class="col col-4 d-none d-lg-block me-3">
-                                        <img class="img-cover shadow " width="300" height="300"
-                                             src="{{ concerts[n+1]["concert_photo"] }}" alt="img">
+                            <div class="carousel-caption">
+                                <div class="container row" style="height: 370px;">
+                                    {% if concerts[n+1]["concert_photo"] %}
+                                        <div class="col col-4 d-none d-lg-block me-3">
+                                            <img class="img-cover shadow " width="300" height="300"
+                                                 src="{{ concerts[n+1]["concert_photo"] }}" alt="img">
+                                        </div>
+                                    {% endif %}
+                                    <div class="col text-start py-5">
+                                        <h1 class="display-2">{{ concerts[n+1]["concert_name"] }}</h1>
+                                        <p>{{ concerts[0]["hall"]['hall_name'] }} <i
+                                                class="bi bi-dot"></i> {{ concerts[n+1]["concert_date"]|dt }}</p>
+                                        <p><a class="btn btn-lg btn-primary text-light"
+                                              href="
+
+
+                                                      {{ url_for('concert_page', id=concerts[n+1]["concert_id"]) }}">{{ _('Buy tickets') }}</a>
+                                        </p>
                                     </div>
-                                {% endif %}
-                                <div class="col text-start py-5">
-                                    <h1 class="display-2">{{ concerts[n+1]["concert_name"] }}</h1>
-                                    <p>{{ concerts[0]["hall"]['hall_name'] }} <i
-                                            class="bi bi-dot"></i> {{ concerts[n+1]["concert_date"]|dt }}</p>
-                                    <p><a class="btn btn-lg btn-primary text-light"
-                                          href="{{ url_for('concert_page', id=concerts[n+1]["concert_id"]) }}">{{  _('Buy tickets') }}</a></p>
                                 </div>
                             </div>
                         </div>
