--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -25,8 +25,8 @@
                         <rect width="100%" height="100%" fill="#aaa"></rect>
                     </svg>
 
-                    <div class="carousel-caption">
-                        <div class="container row" style="height: 370px;">
+                    <div class="carousel-caption" style="height: 370px;">
+                        <div class="container row" >
                             {% if concerts[0]["concert_photo"] %}
                                 <div class="col col-4 d-none d-lg-block me-3">
                                     <img class="img-cover shadow " width="300" height="300"
@@ -53,8 +53,8 @@
                                 <rect width="100%" height="100%" fill="#aaa"></rect>
                             </svg>
 
-                            <div class="carousel-caption">
-                                <div class="container row" style="height: 370px;">
+                            <div class="carousel-caption" style="height: 370px;">
+                                <div class="container row" >
                                     {% if concerts[n+1]["concert_photo"] %}
                                         <div class="col col-4 d-none d-lg-block me-3">
                                             <img class="img-cover shadow " width="300" height="300"
